@@ -1,25 +1,15 @@
-import org.gradle.api.tasks.JavaExec
-
 plugins {
     application
     id("org.openjfx.javafxplugin")
 }
 
-dependencies { implementation(project(":common")) }
+dependencies {
+    implementation(project(":common"))
+}
 
 javafx {
-    version = "17.0.17"
+    version = "17.0.10"
     modules = listOf("javafx.controls", "javafx.graphics")
 }
 
 application { mainClass.set("com.example.paperfx.client.ClientMain") }
-
-tasks.withType<JavaExec>().configureEach {
-    doFirst {
-        val cp = configurations.getByName("runtimeClasspath")
-        jvmArgs(
-            "--module-path", cp.asPath,
-            "--add-modules", "javafx.controls,javafx.graphics"
-        )
-    }
-}
